# binary_segmentation

./: ------ ignore-----TEST (RAW and custom) BASE local Binary Segmentation Training.ipynb  .gitignore  INFERENCE local Binary Segmentation.ipynb  JUST TRAIN local Binary Segmentation.ipynb  README.md  inference.py  local Binary Segmentation Training.ipynb  pyproject.toml  train.py
.ipynb_checkpoints/: ------ ignore-----TEST (RAW and custom) BASE local Binary Segmentation Training-checkpoint.ipynb  Binary Segmentation Training-checkpoint.ipynb  INFERENCE local Binary Segmentation-checkpoint.ipynb  JUST TRAIN local Binary Segmentation-checkpoint.ipynb
lib/: general.py  logic.py
process_dataset/: create_folders.py
