[tool.poetry]
name = "binary-segmentation"
version = "0.1.0"
description = "A binary segmentation implementation with inference, all documented and with a jupyter notebook example"
authors = ["turcuciprian <turcuciprian1@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "binary_segmentation"}]

[tool.poetry.dependencies]
python = "^3.9"
fastai = "^2.7.12"
fastcore = "^1.5.29"
wwf = "^0.0.16"
ipykernel = "^6.22.0"
pillow = "^9.4.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
